@@ -1,3 +1,7 @@
+2007-08-12  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDbUtils/_WriteGedcom.py: remove unused options,
+	handle source TEXT
+
 2007-08-12  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
 	* src/docgen/GtkPrint.py: More work in progress.
 
